--- a/style.css
+++ b/style.css
@@ -1,92 +1,92 @@
-.box{
+.box {
   margin: 3vw;
   padding: 3vw;
   border-radius: 2vw;
-  background: #F2E8DE;
+  background: #f2e8de;
 }
 
-h4{
-  margin-top:1vw;
+h4 {
+  margin-top: 1vw;
   margin-bottom: 0.5vw;
   font-size: 5vw;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
-
-.info{
+.info {
   margin-top: 0;
+  margin-bottom: 0;
   font-weight: 300;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-size: 6vw;
 }
 
-.flexbox{
+.flexbox {
   display: flex;
   margin: 0;
   align-items: flex-end;
 }
 
-.title{
+.title {
   text-align: center;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: 600;
   font-size: 7vw;
 }
 
-
-body{
-  background-color:#ffffff;
+body {
+  background-color: #ffffff;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap");
 
-@media (min-width: 900px){
-  .box{
-  margin: 3vw;
-  padding: 2vw;
-  border-radius: 2vw;
-  background: #F2E8DE;
-  margin-right:0;
-}
+@media (min-width: 900px) {
+  .box {
+    margin: 3vw;
+    padding: 2vw;
+    border-radius: 2vw;
+    background: #f2e8de;
+    margin-right: 0;
+  }
 
-.mediaflex{
-  display: flex;
-}
+  .mediaflex {
+    display: flex;
+  }
 
-h4{
-  margin-top:15px;
-  margin-bottom: 15px;
-  font-size: 3em;
-  font-family: 'Noto Sans KR', sans-serif;
-}
+  h4 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 3em;
+    font-family: "Noto Sans KR", sans-serif;
+  }
 
-.flexbox{
-  display: flex;
-  margin: 0;
-  align-items: flex-end;
-}
+  .flexbox {
+    display: flex;
+    margin: 0;
+    align-items: flex-end;
+  }
 
-h1{
-  font-weight: 300;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 45px;
-}
+  h1 {
+    font-weight: 300;
+    font-family: "Noto Sans KR", sans-serif;
+    font-size: 45px;
+  }
 
-.info{
-  margin-top: 0;
-  font-weight: 300;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 2em;
-}
+  .info {
+    margin-top: 0;
+    font-weight: 300;
+    font-family: "Noto Sans KR", sans-serif;
+    font-size: 2em;
+  }
 
-.title{
-  text-align: left;
-  margin-left: 3vw;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-weight: 600;
-  font-size: 60px;
-}
+  .title {
+    text-align: left;
+    margin-left: 3vw;
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 600;
+    font-size: 60px;
+  }
 
-body{
-  padding: 1vw,5vw,5vw,1vw;
+  body {
+    padding: 1vw, 5vw, 5vw, 1vw;
+  }
 }
